--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -49,6 +49,7 @@
         <!-- Page content-->
         <div class="container">
             <div class="row">
+                <h1><a href="/">Simple SignUp/SignIn app</a></h1>
                 <div class="col-lg-12 text-center">
                     {% block content %}
                     {{ flatpage.content }}
